[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/LoadGame.gd" type="Script" id=1]
[ext_resource path="res://fonts/outer_space.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/nasal.tres" type="DynamicFont" id=3]
[ext_resource path="res://styles/button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/button_disabled.tres" type="StyleBox" id=5]
[ext_resource path="res://styles/button.tres" type="StyleBox" id=6]
[ext_resource path="res://fonts/modern_space.tres" type="DynamicFont" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -248.5
margin_top = 10.0
margin_right = 248.5
custom_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_right = 497.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Load Save"
align = 1

[node name="SaveList" type="ItemList" parent="Panel/VBoxContainer"]
margin_top = 106.0
margin_right = 497.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = ExtResource( 3 )
custom_constants/vseparation = 10

[node name="Load" type="Button" parent="Panel/VBoxContainer"]
margin_top = 326.0
margin_right = 497.0
margin_bottom = 412.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
disabled = true
text = "Load Journey"
[connection signal="item_selected" from="Panel/VBoxContainer/SaveList" to="." method="_on_SaveList_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Load" to="." method="_on_Load_pressed"]
